--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,40 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+dist-ssr/
+
+# Local environment files
 *.local
+.env
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Unnecessary config files (ignored for local development)
+vite-env.d.ts
+vite.config.ts
+stackbit.config.ts
+tsconfig.node.json
+eslint.config.js
+SortableTrack.tsx  # Only if sorting is not needed
+
+# Optional: Ignore OS-specific files
+Thumbs.db
