--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,23 @@
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
+yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
 # Dependencies
-node_modules/
-
-# Build output
-dist/
-dist-ssr/
-
-# Local environment files
+node_modules
+dist
+dist-ssr
 *.local
-.env
 
 # Editor directories and files
-.vscode/
+.vscode/*
 !.vscode/extensions.json
-.idea/
+!.vscode/settings.json
+.idea
 .DS_Store
 *.suo
 *.ntvs*
@@ -28,13 +25,18 @@ dist-ssr/
 *.sln
 *.sw?
 
-# Unnecessary config files (ignored for local development)
-vite-env.d.ts
-vite.config.ts
-stackbit.config.ts
-tsconfig.node.json
-eslint.config.js
-SortableTrack.tsx  # Only if sorting is not needed
+# Environment variables
+.env
+.env.*
+!.env.example
 
-# Optional: Ignore OS-specific files
-Thumbs.db
+# Testing
+coverage
+
+# Temporary files
+*.tmp
+*.temp
+.cache
+
+# Build output
+stats.html
